pesticide re-analysis

--- a/OlyO/OlyOv5-QC.ipynb
+++ b/OlyO/OlyOv5-QC.ipynb
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -748,6 +748,14 @@
       "\n",
       "Writing unpaired read 1 reads to R1_unpaired_1.fq\n",
       "Writing unpaired read 2 reads to R2_unpaired_2.fq\n",
+      "\n",
+      "Total number of sequences analysed: 200998380\n",
+      "\n",
+      "Number of sequence pairs removed because at least one read was shorter than the length cutoff (20 bp): 5045367 (2.51%)\n",
+      "\n",
+      "Deleting both intermediate output files R1_trimmed.fq and R2_trimmed.fq\n",
+      "\n",
+      "====================================================================================================\n",
       "\n"
      ]
     }
@@ -763,37 +771,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Started analysis of R1_val_1.fq\n",
+      "Approx 5% complete for R1_val_1.fq\n",
+      "Approx 10% complete for R1_val_1.fq\n",
+      "Approx 15% complete for R1_val_1.fq\n",
+      "Approx 20% complete for R1_val_1.fq\n",
+      "Approx 25% complete for R1_val_1.fq\n",
+      "Approx 30% complete for R1_val_1.fq\n",
+      "Approx 35% complete for R1_val_1.fq\n",
+      "Approx 40% complete for R1_val_1.fq\n",
+      "Approx 45% complete for R1_val_1.fq\n",
+      "Approx 50% complete for R1_val_1.fq\n",
+      "Approx 55% complete for R1_val_1.fq\n",
+      "Approx 60% complete for R1_val_1.fq\n",
+      "Approx 65% complete for R1_val_1.fq\n",
+      "Approx 70% complete for R1_val_1.fq\n",
+      "Approx 75% complete for R1_val_1.fq\n",
+      "Approx 80% complete for R1_val_1.fq\n",
+      "Approx 85% complete for R1_val_1.fq\n",
+      "Approx 90% complete for R1_val_1.fq\n",
+      "Approx 95% complete for R1_val_1.fq\n",
+      "Approx 100% complete for R1_val_1.fq\n",
+      "Analysis complete for R1_val_1.fq\n"
+     ]
+    }
+   ],
    "source": [
     "!/Applications/bioinfo/FastQC/fastqc \\\n",
-    "R1_val_1.fastq \\\n",
+    "R1_val_1.fq \\\n",
     "-o /Users/sr320/data-genomic/tentacle/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Started analysis of R2_val_2.fq\n",
+      "Approx 5% complete for R2_val_2.fq\n",
+      "Approx 10% complete for R2_val_2.fq\n",
+      "Approx 15% complete for R2_val_2.fq\n",
+      "Approx 20% complete for R2_val_2.fq\n",
+      "Approx 25% complete for R2_val_2.fq\n",
+      "Approx 30% complete for R2_val_2.fq\n",
+      "Approx 35% complete for R2_val_2.fq\n",
+      "Approx 40% complete for R2_val_2.fq\n",
+      "Approx 45% complete for R2_val_2.fq\n",
+      "Approx 50% complete for R2_val_2.fq\n",
+      "Approx 55% complete for R2_val_2.fq\n",
+      "Approx 60% complete for R2_val_2.fq\n",
+      "Approx 65% complete for R2_val_2.fq\n",
+      "Approx 70% complete for R2_val_2.fq\n",
+      "Approx 75% complete for R2_val_2.fq\n",
+      "Approx 80% complete for R2_val_2.fq\n",
+      "Approx 85% complete for R2_val_2.fq\n",
+      "Approx 90% complete for R2_val_2.fq\n",
+      "Approx 95% complete for R2_val_2.fq\n",
+      "Approx 100% complete for R2_val_2.fq\n",
+      "Analysis complete for R2_val_2.fq\n"
+     ]
+    }
+   ],
    "source": [
     "!/Applications/bioinfo/FastQC/fastqc \\\n",
-    "R2_val_2.fastq \\\n",
+    "R2_val_2.fq \\\n",
     "-o /Users/sr320/data-genomic/tentacle/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Started analysis of R1_unpaired_1.fq\n",
+      "Approx 5% complete for R1_unpaired_1.fq\n",
+      "Approx 10% complete for R1_unpaired_1.fq\n",
+      "Approx 15% complete for R1_unpaired_1.fq\n",
+      "Approx 20% complete for R1_unpaired_1.fq\n",
+      "Approx 25% complete for R1_unpaired_1.fq\n",
+      "Approx 30% complete for R1_unpaired_1.fq\n",
+      "Approx 35% complete for R1_unpaired_1.fq\n",
+      "Approx 40% complete for R1_unpaired_1.fq\n",
+      "Approx 45% complete for R1_unpaired_1.fq\n",
+      "Approx 50% complete for R1_unpaired_1.fq\n",
+      "Approx 55% complete for R1_unpaired_1.fq\n",
+      "Approx 60% complete for R1_unpaired_1.fq\n",
+      "Approx 65% complete for R1_unpaired_1.fq\n",
+      "Approx 70% complete for R1_unpaired_1.fq\n",
+      "Approx 75% complete for R1_unpaired_1.fq\n",
+      "Approx 80% complete for R1_unpaired_1.fq\n",
+      "Approx 85% complete for R1_unpaired_1.fq\n",
+      "Approx 90% complete for R1_unpaired_1.fq\n",
+      "Approx 95% complete for R1_unpaired_1.fq\n",
+      "Analysis complete for R1_unpaired_1.fq\n"
+     ]
+    }
+   ],
    "source": [
     "!/Applications/bioinfo/FastQC/fastqc \\\n",
     "R1_unpaired_1.fq \\\n",
@@ -802,11 +896,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Started analysis of R2_unpaired_2.fq\n",
+      "Approx 5% complete for R2_unpaired_2.fq\n",
+      "Approx 10% complete for R2_unpaired_2.fq\n",
+      "Approx 15% complete for R2_unpaired_2.fq\n",
+      "Approx 20% complete for R2_unpaired_2.fq\n",
+      "Approx 25% complete for R2_unpaired_2.fq\n",
+      "Approx 30% complete for R2_unpaired_2.fq\n",
+      "Approx 35% complete for R2_unpaired_2.fq\n",
+      "Approx 40% complete for R2_unpaired_2.fq\n",
+      "Approx 45% complete for R2_unpaired_2.fq\n",
+      "Approx 50% complete for R2_unpaired_2.fq\n",
+      "Approx 55% complete for R2_unpaired_2.fq\n",
+      "Approx 60% complete for R2_unpaired_2.fq\n",
+      "Approx 65% complete for R2_unpaired_2.fq\n",
+      "Approx 70% complete for R2_unpaired_2.fq\n",
+      "Approx 75% complete for R2_unpaired_2.fq\n",
+      "Approx 80% complete for R2_unpaired_2.fq\n",
+      "Approx 85% complete for R2_unpaired_2.fq\n",
+      "Approx 90% complete for R2_unpaired_2.fq\n",
+      "Approx 95% complete for R2_unpaired_2.fq\n",
+      "Analysis complete for R2_unpaired_2.fq\n"
+     ]
+    }
+   ],
    "source": [
     "!/Applications/bioinfo/FastQC/fastqc \\\n",
     "R2_unpaired_2.fq \\\n",
