adding Trinity output

--- a/OlyO/OlyOv6.ipynb
+++ b/OlyO/OlyOv6.ipynb
@@ -169,6 +169,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Running blastx"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "%%bash\n",
+    "for f in query.part*\n",
+    "do\n",
+    "blastx \\\n",
+    "-query $f \\\n",
+    "-db /usr/local/bioinformatics/dbs/uniprot_sprot.fasta \\\n",
+    "-evalue 1e-5 \\\n",
+    "-max_target_seqs 1 \\\n",
+    "-max_hsps 1 \\\n",
+    "-outfmt 6 \\\n",
+    "-num_threads 16 \\\n",
+    "-out blastout_\"$f\"_sp \\\n",
+    "2> error-blastout_\"$f\"_sp\n",
+    "done\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
