--- a/util/iCommands.ipynb
+++ b/util/iCommands.ipynb
@@ -498,6 +498,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERROR: getCollUtil: getDataObjUtil failed for /iplant/home/sr320/Mytilus_SXT/NCBI_SRA_Toolkit_fastq-dump_2.3.4_analysis1-2015-12-16-22-31-36.5/logs/condor-0-input-0-stderr. status = -312000 status = -312000 OVERWRITE_WITHOUT_FORCE_FLAG\n",
+      "ERROR: getCollUtil: getDataObjUtil failed for /iplant/home/sr320/Mytilus_SXT/NCBI_SRA_Toolkit_fastq-dump_2.3.4_analysis1-2015-12-16-22-31-36.5/logs/condor-0-input-0-stdout. status = -312000 status = -312000 OVERWRITE_WITHOUT_FORCE_FLAG\n",
+      "ERROR: getCollUtil: getDataObjUtil failed for /iplant/home/sr320/Mytilus_SXT/NCBI_SRA_Toolkit_fastq-dump_2.3.4_analysis1-2015-12-16-22-31-36.5/logs/condor-stderr-0. status = -312000 status = -312000 OVERWRITE_WITHOUT_FORCE_FLAG\n",
+      "ERROR: getCollUtil: getDataObjUtil failed for /iplant/home/sr320/Mytilus_SXT/NCBI_SRA_Toolkit_fastq-dump_2.3.4_analysis1-2015-12-16-22-31-36.5/logs/condor-stdout-0. status = -312000 status = -312000 OVERWRITE_WITHOUT_FORCE_FLAG\n",
+      "ERROR: getCollUtil: getDataObjUtil failed for /iplant/home/sr320/Mytilus_SXT/NCBI_SRA_Toolkit_fastq-dump_2.3.4_analysis1-2015-12-16-22-31-36.5/logs/de-transfer-trigger.log. status = -312000 status = -312000 OVERWRITE_WITHOUT_FORCE_FLAG\n",
+      "ERROR: getCollUtil: getDataObjUtil failed for /iplant/home/sr320/Mytilus_SXT/NCBI_SRA_Toolkit_fastq-dump_2.3.4_analysis1-2015-12-16-22-31-36.5/logs/iplant.cmd. status = -312000 status = -312000 OVERWRITE_WITHOUT_FORCE_FLAG\n",
+      "ERROR: getCollUtil: getDataObjUtil failed for /iplant/home/sr320/Mytilus_SXT/NCBI_SRA_Toolkit_fastq-dump_2.3.4_analysis1-2015-12-16-22-31-36.5/logs/iplant.sh. status = -312000 status = -312000 OVERWRITE_WITHOUT_FORCE_FLAG\n",
+      "ERROR: getCollUtil: getCollUtil failed for /iplant/home/sr320/Mytilus_SXT/NCBI_SRA_Toolkit_fastq-dump_2.3.4_analysis1-2015-12-16-22-31-36.5/logs. status = -312000 status = -312000 OVERWRITE_WITHOUT_FORCE_FLAG\n",
+      "ERROR: getCollUtil: getDataObjUtil failed for /iplant/home/sr320/Mytilus_SXT/NCBI_SRA_Toolkit_fastq-dump_2.3.4_analysis1-2015-12-16-22-31-36.5/SRR1598943.sra_1.fastq. status = -312000 status = -312000 OVERWRITE_WITHOUT_FORCE_FLAG\n",
+      "ERROR: getUtil: get error for ./NCBI_SRA_Toolkit_fastq-dump_2.3.4_analysis1-2015-12-16-22-31-36.5 status = -312000 OVERWRITE_WITHOUT_FORCE_FLAG\n"
+     ]
+    }
+   ],
+   "source": [
+    "!iget -r /iplant/home/sr320/Mytilus_SXT/NCBI_SRA_Toolkit_fastq-dump_2.3.4_analysis1-2015-12-16-22-31-36.5\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
