--- a/OlyO/OlyOv5-Assembly.ipynb
+++ b/OlyO/OlyOv5-Assembly.ipynb
@@ -29,9 +29,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Local Python",
    "language": "python",
-   "name": "python2"
+   "name": "local"
   },
   "language_info": {
    "codemirror_mode": {
